// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GrcToggle view renders expand as expected 1`] = `ShallowWrapper {}`;

exports[`GrcToggle view renders expand as expected 2`] = `ShallowWrapper {}`;

exports[`GrcToggle view with application renders expand as expected 1`] = `ShallowWrapper {}`;

exports[`GrcToggle view with application renders expand as expected 2`] = `ShallowWrapper {}`;

exports[`GrcToggle view without application renders expand as expected 1`] = `ShallowWrapper {}`;

exports[`GrcToggle view without application renders expand as expected 2`] = `ShallowWrapper {}`;

exports[`GrcView toggleClick renders as expected 1`] = `
<div
  className="module-toggle-tab-switch-strip"
>
  <div
    className="module-toggle-tab-switch-makeup"
  />
  <div
    className="module-toggle-tab-switch"
  >
    <ContentSwitcher
      onChange={[Function]}
      selectedIndex={0}
    >
      <Switch
        href=""
        kind="anchor"
        onClick={[Function]}
        onKeyDown={[Function]}
        selected={false}
        text="Policies"
      />
      <Switch
        href=""
        kind="anchor"
        onClick={[Function]}
        onKeyDown={[Function]}
        selected={false}
        text="Cluster violations"
      />
      <Switch
        href=""
        kind="anchor"
        onClick={[Function]}
        onKeyDown={[Function]}
        selected={false}
        text="Applications"
      />
    </ContentSwitcher>
  </div>
</div>
`;

exports[`GrcView toggleClick renders as expected 2`] = `
<div
  className="module-toggle-tab-switch-strip"
>
  <div
    className="module-toggle-tab-switch-makeup"
  />
  <div
    className="module-toggle-tab-switch"
  >
    <ContentSwitcher
      onChange={[Function]}
      selectedIndex={1}
    >
      <Switch
        href=""
        kind="anchor"
        onClick={[Function]}
        onKeyDown={[Function]}
        selected={false}
        text="Policies"
      />
      <Switch
        href=""
        kind="anchor"
        onClick={[Function]}
        onKeyDown={[Function]}
        selected={false}
        text="Cluster violations"
      />
      <Switch
        href=""
        kind="anchor"
        onClick={[Function]}
        onKeyDown={[Function]}
        selected={false}
        text="Applications"
      />
    </ContentSwitcher>
  </div>
</div>
`;

exports[`GrcView toggleClick renders as expected 3`] = `
<div
  className="module-toggle-tab-switch-strip"
>
  <div
    className="module-toggle-tab-switch-makeup"
  />
  <div
    className="module-toggle-tab-switch"
  />
</div>
`;

exports[`GrcView toggleClick renders as expected 4`] = `
<div
  className="module-toggle-tab-switch-strip"
>
  <div
    className="module-toggle-tab-switch-makeup"
  />
  <div
    className="module-toggle-tab-switch"
  />
</div>
`;
